--- a/src/assets/scss/02-settings/_js-animations.scss
+++ b/src/assets/scss/02-settings/_js-animations.scss
@@ -1,12 +1,13 @@
-// TODO: Animation on hover -> CSS.
-
 /* purgecss start ignore */
 
 @include js {
 
   [data-animation] {
-    opacity: 0;
-    // will-change: transform;
+    opacity: 0.1;
+
+    @include mq(prm) {
+      opacity: 1;
+    }
   }
 
   [data-animation='bigTranslate'] {
