Add skip to main content link

--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -1,24 +1,17 @@
 <header class="c-header">
+  <a class="c-skip" href="#main" aria-hidden="true">Skip to content</a>
   <div class="l-container">
     <div class="c-header__wrapper">
       <div class="c-header__banner">
         <div class="c-header__title">
           <h1 class="o-title o-title--main js-animation" data-animation="fadeIn">{{ title }}</h1>
         </div>
-        <div>
+        <div class="c-header__description">
           <h2 class="o-text js-animation" data-animation="fadeIn">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
           <p class="js-animation" data-animation="fadeIn">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
           <a class="o-small u-underline js-link js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
         </div>
       </div>
-      {# <ul class="c-skip">
-        <li class="c-skip__item">
-          <a class="o-small" href="#main" aria-label="skip to content">Skip to content</a>
-        </li>
-        <li class="c-skip__item">
-          <a class="o-small" href="#main">↓ Scroll down</a>
-        </li>
-      </ul> #}
     </div>
   </div>
 </header>
