--- a/src/views/templates/base.njk
+++ b/src/views/templates/base.njk
@@ -6,7 +6,7 @@ robots: index, follow
 ---
 
 <!doctype html>
-<html lang="en" class="no-js">
+<html itemprop lang="en" class="no-js">
 
   {% include 'head.njk' %}
 
