Fix aria for skip to main content link

--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -1,5 +1,5 @@
 <header class="c-header">
-  <a class="c-skip" href="#main" aria-hidden="true">Skip to content</a>
+  <a class="c-skip" href="#main">Skip to content</a>
   <div class="l-container">
     <div class="c-header__wrapper">
       <div class="c-header__banner">
