Fix animatable elements visibility

--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,7 +1,7 @@
 <div class="c-projects">
   <div class="c-projects__title">
-    <h2 class="o-text js-animation" data-animation="title">Projects</h2>
-    <span class="o-symbol o-symbol--after js-animation" data-animation="title" data-symbol="↓"></span>
+    <h2 class="o-text u-hidden js-animation" data-animation="title">Projects</h2>
+    <span class="o-symbol o-symbol--after u-hidden js-animation" data-animation="title" data-symbol="↓"></span>
   </div>
   <div class="c-projects__list">
     {% for project in projects %}
