--- a/src/assets/scss/02-settings/_type.scss
+++ b/src/assets/scss/02-settings/_type.scss
@@ -47,4 +47,11 @@ a {
     outline: 1px solid $c-dark-grey;
     outline-offset: 0.25rem;
   }
+
+  &:hover {
+
+    @include mq(':h') {
+      outline-style: none;
+    }
+  }
 }
