--- a/src/assets/scss/02-settings/_js-animations.scss
+++ b/src/assets/scss/02-settings/_js-animations.scss
@@ -3,7 +3,7 @@
 @include js {
 
   [data-animation='bigTranslate'] {
-    transform-origin: left top;
+    transform-origin: right top;
     display: block;
   }
 
