--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -9,7 +9,7 @@
         <div class="c-header__description">
           <h2 class="o-text u-hidden js-animation" data-animation="fadeIn">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
           <p class="u-hidden js-animation" data-animation="fadeIn">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
-          <a class="o-small u-underline js-link u-hidden js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+          <a class="o-small u-underline u-hidden js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
         </div>
       </div>
     </div>
