Add 404 and offline pages

--- a/src/views/templates/base.njk
+++ b/src/views/templates/base.njk
@@ -1,7 +1,8 @@
 ---
+globalTitle: Benjamin Dos Santos
 thumbnail: /assets/images/other/thumbnail.png
 type: website
-description: A great description for my super website.
+description: Digital Designer & Frontend Developer based in Belgium.
 robots: index, follow
 ---
 
@@ -16,8 +17,6 @@ robots: index, follow
       {% include 'header.njk' %}
 
       {{ content | safe }}
-
-      {% include 'footer.njk' %}
 
     </div>
   </body>
