--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -4,12 +4,14 @@
     <div class="c-header__wrapper">
       <div class="c-header__banner">
         <div class="c-header__title">
-          <h1 class="o-title o-title--main u-hidden js-animation" data-animation="fadeIn">{{ title }}</h1>
+          <h1 class="o-title o-title--main u-hidden js-animation" data-animation="fadeIn">{{ header.title }}</h1>
         </div>
         <div class="c-header__description">
-          <h2 class="o-text u-hidden js-animation" data-animation="fadeIn">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
-          <p class="u-hidden js-animation" data-animation="fadeIn">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
-          <a class="o-small u-underline u-hidden js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+          <h2 class="o-text u-hidden js-animation" data-animation="fadeIn">{{ header.subtitle }}</h2>
+            <p class="u-hidden js-animation" data-animation="fadeIn">{{ header.content }}</p>
+          {% if header.link %}
+            <a class="o-small u-underline u-hidden js-animation" data-animation="fadeIn" href="{{ header.link.url }}">{{ header.link.display }}</a>
+          {% endif %}
         </div>
       </div>
     </div>
