--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -1,13 +1,28 @@
 ---
-title: Benjamin Dos Santos
+title: Digital Designer & Frontend Developer
+eleventyComputed:
+  pageTitle: '{{ globalTitle }} — {{ title }}'
 layout: base
 namespace: home
+header:
+  title: Benjamin Dos Santos
+  subtitle: I’m Digital Designer & Frontend Developer.
+  content: Freshly graduated in Web & Mobile Design, I’m currently looking for a job.
+  link:
+    display: hello@benjamindossantos.be
+    url: mailto:hello@benjamindossantos.be
 ---
 
 <main id="main">
   <div class="l-container">
+
     {% block content %}
+
       {% include 'projects.njk' %}
+
     {% endblock %}
+
   </div>
 </main>
+
+{% include 'footer.njk' %}
