--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -9,7 +9,7 @@ header:
   subtitle: I’m Digital Designer & Frontend Developer.
   content: Freshly graduated in Web & Mobile Design, I’m currently looking for a job.
   link:
-    display: hello@benjamindossantos.be
+    display: hello＠benjamindossantos.be
     url: mailto:hello@benjamindossantos.be
 ---
 
