Fix thumbnail to png

--- a/src/views/templates/base.njk
+++ b/src/views/templates/base.njk
@@ -1,6 +1,6 @@
 ---
 globalTitle: Benjamin Dos Santos
-thumbnail: /assets/images/other/thumbnail.svg
+thumbnail: /assets/images/other/thumbnail.png
 type: website
 description: Digital Designer & Frontend Developer based in Belgium.
 robots: index, follow
