Update header content on home

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -6,8 +6,8 @@ layout: base
 namespace: home
 header:
   title: Benjamin Dos Santos
-  subtitle: I’m Digital Designer & Frontend Developer.
-  content: Freshly graduated in Web & Mobile Design, I’m currently looking for a job.
+  subtitle: I’m Digital Designer & Front-End Developer.
+  content: Currently working as Front-End Developer at <a href="https://mcarnolds.be" target="_blank">McArnolds</a>.
   link:
     display: hello＠benjamindossantos.be
     url: mailto:hello@benjamindossantos.be
@@ -18,7 +18,7 @@ header:
 
     {% block content %}
 
-      {% include 'projects.njk' %}
+      {# {% include 'projects.njk' %} #}
 
     {% endblock %}
 
