--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Digital Designer & Frontend Developer
+title: Digital Designer & Front-End Developer
 eleventyComputed:
   pageTitle: '{{ globalTitle }} — {{ title }}'
 layout: base
@@ -7,7 +7,7 @@ namespace: home
 header:
   title: Benjamin Dos Santos
   subtitle: I’m Digital Designer & Front-End Developer.
-  content: Currently working as Front-End Developer at <a href="https://mcarnolds.be" target="_blank">McArnolds</a>.
+  content: Currently Front-End Developer at <a class="u-underline" href="https://mcarnolds.be" target="_blank">McArnolds</a>.
   link:
     display: hello＠benjamindossantos.be
     url: mailto:hello@benjamindossantos.be
