--- a/src/assets/scss/05-layouts/_container.scss
+++ b/src/assets/scss/05-layouts/_container.scss
@@ -1,3 +1,14 @@
 .l-container {
   margin: 0 $sp-s;
 }
+
+/* purgecss start ignore */
+
+.scroll-content{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* purgecss end ignore */
