Fix animations delay

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -13,8 +13,8 @@ header:
     url: mailto:hello@benjamindossantos.be
 ---
 
-<main id="main">
-  <div class="l-container">
+{# <main id="main"> #}
+  {# <div class="l-container"> #}
 
     {% block content %}
 
@@ -22,7 +22,7 @@ header:
 
     {% endblock %}
 
-  </div>
-</main>
+  {# </div> #}
+{# </main> #}
 
 {% include 'footer.njk' %}
